[package]
name = "servers"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
fern = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
lib_common = { workspace = true, features = ["loggers", "utils", "configs"] }
log = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
static_init = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tokio-graceful = { workspace = true }
tokio-postgres = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
http = { workspace = true }
tower-http = { workspace = true }

[build-dependencies]

# [[bin]]
# name = "server_speak"
# path = "src/server_speak.rs"

# [[bin]]
# name = "server_log"
# path = "src/server_log.rs"

# [[bin]]
# name = "redis2ws"
# path = "src/redis2ws.rs"

# [[bin]]
# name = "server_sql"
# path = "src/server_sql.rs"

[[bin]]
name = "server_dummy"
path = "src/server_dummy.rs"

