[package]
name = "nasdaq"
version = "0.1.0"
edition = "2024"

[dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.97"

# This library provides a convenient derive macro for the standard library’s std::error::Error trait.
thiserror = "2.0.12"

# A well-maintained fork of the dotenv crate
dotenvy = "0.15.7"

# A generic serialization/deserialization framework
serde = { version = "1.0.218", features = ["derive"] }
# Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde_derive = "1.0.218"
# A JSON serialization file format
serde_json = "1.0.139"

# Safe mutable static and non const static initialization,
# and code execution at program startup/exit.
static_init = "1.0.3"

# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications
tokio = { version = "1.48.0", features = ["full"] }
# util for graceful shutdown of tokio applications
# tokio-graceful = "0.2.2"
# Tasks can optionally be persisted using PostgreSQL or Nats.
tokio-cron-scheduler = "0.15.1"

# Application-level tracing for Rust
tracing = "0.1.41"
# tracing-appender base on localtime (chrono)
tracing-appender = "0.2.3"
# Utilities for implementing and composing `tracing` subscribers
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# higher level HTTP client library
reqwest = { version = "0.12.15", features = ["json", "blocking"] } 

# Redis-rs is a high level Rust library for Redis
redis = { version = "1.0.1", features = ["tokio-comp"] }

# 
chrono-tz = "0.10.3"

# My own crates
lib_common = { path = "../../lib_common" }
chrono = "0.4.40"

[[bin]]
name = "apicall"
path = "apicall.rs"

[[bin]]
name = "marketstatus"
path = "market_status.rs"
